--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
             </ul>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
