--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-bar">
             <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>About</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
