added menu and contact

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <header>
         <nav class="nav-bar">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Menu</a></li>
+                <li><a href="#slideshow-container">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
