--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="#slideshow-container">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
